--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -297,7 +297,7 @@ hr {
 }
 .main-navigation .nav-menu {
   position: relative;
-  width: 730px;
+  width: 720px;
   height: 60px;
   border: 1px solid #ffffff;
   border-bottom: none;
