--- a/assets/scss/src/critical-grants.css
+++ b/assets/scss/src/critical-grants.css
@@ -285,7 +285,7 @@ hr {
 }
 .main-navigation .nav-menu {
   position: relative;
-  width: 730px;
+  width: 720px;
   height: 60px;
   border: 1px solid #ffffff;
   border-bottom: none;
